# fxplayer

./: .clang-format  .gitignore  ARCHITECTURE.md  BUGS.md  BUILD.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  bugs.md  build-cli.sh  build-web.sh  build.sh  fx-main.js  fx-worker.js  fx-worklet.js  fxcore.wasm  index.html  serve-web.sh
.github/workflows/: deploy-web.yml
_original/: CHECK.TXT  COMMAND.CPP  DAT_669.CPP  DAT_669.H  DAT_MOD.CPP  DAT_S3M.CPP  DAT_WAV.H  DEV_SB.CPP  EFC_MOD.CPP  EFC_MOD.H  FILE_ID.DIZ  FX.CFG  FX.CPP  FX.H  FX.MAP  FXCHECK.S3M  IDEA.TXT  KEYCTRL.H  MAKEFILE  MAZ-TEST.IT  MAZ-TEST.S3M  MAZ2TEST.XM  MIXER.H  MIXR_32I.ASM  MIXR_32N.ASM  STDPRJ.MAK  TASM.CFG  TODO.TXT  W.BAT  WCC.CFG  WM.BAT  fxstart.bat
_original/BAK/: CARDS.ASM  CARDS.H  DAT_WAV.CPP  DMA.ASM  FWAV.ASM  FWAV.H  FX.REV  FXMEM.ASM  IRQ2.ASM  OLDIRQ.CPP  SB.ASM
_original/BAK/035/: ASS.BAT  FILEDSK3.BAK  FILEDSK3.C  FMS.ASM  FX.BAK  FX.C  FX.H  FX.INI  FX.MAK  FX.OLD  FXSPEED.TXT  INI.BAK  INI.EXT  MACRO.ASM  MIXER.ASM  MIXMODE.ASM  MODP.C  PEFFEKT.ASM  PLAY.ASM  PLOAD.ASM  PMEM.ASM  SBSET.ASM  SBWIN.C  SCREEN.C  TASTEN.BAK  TASTEN.H  TICKER.ASM
_original/BAK/038/: FILEDSK3.C  FMS.ASM  FX.C  FX.CFG  FX.DOC  FX.H  FX.INI  FX.MAK  FX.REV  FXG.DOC  FXSPEED.TXT  FXUTIL.ASM  INI.EXT  MACRO.ASM  MIXCONTR.ASM  MIXER.ASM  MIXMI0.ASM  MIXMI1.ASM  MIXSI0.ASM  MIXSI1.ASM  PATTERN.ASM  PEFFEKT.ASM  PLAY.ASM  PLOAD.ASM  SCREEN.C  TICKER.ASM
_original/BAK/040/: FILEDSK3.C  FMS.ASM  FX.C  FX.CFG  FX.DSK  FX.H  FX.INI  FX.MAK  FX.OLD  FXG.DOC  FXUTIL.ASM  MACRO.ASM  MASTERVO.ASM  MIXCONTR.ASM  MIXER.ASM  MIXMI0.ASM  MIXMI1.ASM  MIXSI0.ASM  MIXSI1.ASM  MODP.C  NODEBUG.TXT  PEFFEKT.ASM  PLAY.ASM  PLOAD.ASM  PRINT.ASM  RESET.ASM  SBSET.ASM  SBWIN.C  STR.ASM  TICKER.ASM
_original/BAK/041B/: 4.BAT  ASS.BAT  FILEDSK3.C  FORMATS.DOC  FX.C  FX.CFG  FX.H  FX.INI  FX.MAK  FX.OLD  FX.REV  FX01.PCX  FX02.PCX  FXG.DOC  FXUTIL.ASM  INI.C  INI.EXT  MIXER.ASM  MIXMI1.ASM  MIXSI0.ASM  MIXSI1.ASM  MODP.C  PATTERN.ASM  PEFFEKT.ASM  PLAY.ASM  PLOAD.ASM  RESET.ASM  TICKER.ASM
_original/BAK/050/: CHECK.TXT  COMMAND.CPP  CONVERT.CPP  DAT_CALC.CPP  DAT_CALC.H  DAT_S3M.CPP  DAT_S3M.H  DAT_WAV.CPP  DAT_WAV.H  DEVICE.CPP  DEVICE.H  DEV_SB.CPP  DEV_SB.H  DMA.CPP  DMA.H  EFC_S3M.CPP  EFC_S3M.H  FORMAT.CPP  FORMATS.DOC  FORMATS2.DOC  FX.CFG  FX.CPP  FX.H  FX.INI  FX.LNK  FX.MAP  FX.REV  FXINI.OLD  IRQ.CPP  IRQ.H  MAKEFILE  MIXER.CPP  MIXER.H  MIXR_ASM.ASM  PMODEW.DOC  S3M.TXT  STDPRJ.MAK  TODO.TXT  WAV&MOD.TXT  WAV2.TXT  (+1 more)
_original/BAK/057/: COMMAND.CPP  CONVERT.CPP  DAT_CALC.CPP  DAT_CALC.H  DAT_S3M.CPP  DAT_S3M.H  DAT_WAV.CPP  DAT_WAV.H  DEVICE.CPP  DEVICE.H  DEV_SB.CPP  DEV_SB.H  DEV_WSS.CPP  DEV_WSS.H  EFC_S3M.CPP  FORMAT.CPP  FORMAT.H  FORMATS.DOC  FX.CPP  FX.H  FX.LNK  FX.REV  IRQ.CPP  IRQ.H  MAKEFILE  MIXER.CPP  MIXER.H  MIXR_ASM.ASM  STDPRJ.MAK  WCC.CFG
_original/BAK/062/: 16T.S3M  COMMAND.CPP  COMMAND.H  DAT_MOD.CPP  DAT_MOD.H  DAT_S3M.CPP  DAT_S3M.H  DAT_WAV.CPP  DAT_WAV.H  DEVICE.CPP  DEVICE.H  DEV_SB.CPP  DEV_WSS.CPP  DMA.H  EFC_MOD.CPP  EFC_MOD.H  EFC_S3M.CPP  EFC_S3M.H  FORMAT.CPP  FORMAT.H  FX.CPP  FX.H  FX.LNK  FX.REV  FX.S3M  IRQ.CPP  ITTECH.DOC  MAKEFILE  MIXER.CPP  MIXER.H  MIXR_16N.ASM  MIXR_32N.ASM  TEST.S3M  WCC.CFG
_original/BAK/LITE/: 4.BAT  ASS.BAT  DECODE.ASM  FXLITE.C  FXLITE.CFG  FXLITE.DSK  FXLITE.MAK  FXLITE.OLD  FXLITE.PRJ  FXUTIL.ASM  MACRO.ASM  MASTERVO.ASM  MIXCONTR.ASM  MIXER.ASM  MIXMI0.ASM  MIXMI0.OLD  MIXMI1.ASM  MODP.C  PEFFEKT.ASM  PLAY.ASM  PRINT.ASM  PSET.ASM
_original/BAK/WUNDERFX/: FX.INI  MIXMODE.ASM  TICKER.ASM
_original/BEO/: FILE_ID.DIZ  FILE_ID1.DIZ  FILE_ID2.DIZ  FILE_ID3.DIZ  FORMATS.DOC  FORMATS2.TXT  FX-PRE1.SCR  FX.INI
_original/PUBLIC/: FX.REV
_original/PUBLIC/013/: DIALOG.H  FMS.ASM  FOPEN.H  FX.C  FX.CFG  FX.DSK  FX.MAK  FX.OLD  FX.PRJ  FXTRACK.INI  INI.H  MIXER.ASM  M_TOOL.H  PATTERN.ASM  PLAY.ASM  PLOAD.ASM  PSET.ASM  SCREEN.C  STR.ASM  TASTEN.H  TICKER.ASM
_original/PUBLIC/020/: FX.INI
_original/PUBLIC/021/: ASS.BAT  FILEDSK3.BAK  FILEDSK3.C  FMS.ASM  FX.C  FX.DSK  FX.H  FX.INI  FX.MAK  FX.OLD  FX.PRJ  FX.REV  FXG.DOC  INI.C  MASTERVO.ASM  MIXER.ASM  MODP.C  PATTERN.ASM  PEFFEKT.ASM  PLAY.ASM  PLOAD.ASM  PRINT.ASM  PSET.ASM  SCREEN.C  STR.ASM  TASTEN.H
_original/PUBLIC/038/: FX.INI  FX.REV
_original/PUBLIC/041/: FILE_ID.DIZ  FORMATS.DOC  FX.INI  FX.REV
_watcom2/: README.txt
_work/: .gitignore  DAT_669.CPP  DAT_MOD.CPP  DAT_MOD.H  DAT_S3M.CPP  DAT_WAV.CPP  DEVICE.CPP  DEVICE.H  DEV_SB.H  DMA.CPP  EFC_669.CPP  EFC_S3M.CPP  EFC_S3M.H  FEATURES.TXT  FORMAT.H  FX.INI  FX.PIF  FX.REV  FX.vlp  FXINI.OLD  INI.CPP  IRQ.CPP  MAZ-TEST.XM  MIXER.LST  MIXR_16N.ASM  MIXR_32I.ASM  MIXR_32N.ASM  amptable.cpp  amptable.h  build-dos.linux.sh  build-linux.sh  command.cpp  command.h  convert.cpp  convert.h  dat_669.h  dat_S3M.h  dat_calc.cpp  dat_calc.h  dat_mod.cpp  (+30 more)
_work/BEO/: FX-PRE2.SCR  FX.REV  HOTKEYS
cmake/: check_sha256.cmake
core/: CMakeLists.txt
core/effect/: efc_669.c  efc_mod.c  efc_mod.h  efc_s3m.c
core/engine/: fx.c
core/format/: mod.c  s3m.c  s3m.h
core/include/fx/: fx.h
core/mixer/: mixer_scalar.c  mixer_scalar.h
core/util/: calc.c  calc.h
docs/: open-watcom-v2.md  openwatcom-v2-bugs.md
docs/superpowers/plans/: 2026-06-19-c99-core-port.md  2026-06-22-cli-interactive-mode.md  2026-06-23-web-host.md
docs/superpowers/specs/: 2026-06-19-c99-core-port-design.md  (+2 more)
host/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/effect/: efc_669.c  efc_669.h  efc_mod.c  efc_mod.h  efc_s3m.c  efc_s3m.h
src/core/engine/: fx.c
src/core/format/: m669.c  m669.h  mod.c  mod.h  s3m.c  s3m.h
src/core/include/fx/: fx.h
src/core/mixer/: mixer_scalar.c  mixer_scalar.h
src/core/util/: calc.h
src/host/cli/: CMakeLists.txt  args.cpp  args.h  main.cpp  tty.cpp  tty.h
tests/: CMakeLists.txt  render-dosbox.sh
tests/reference_renders/: purple.669
tests/render/: CMakeLists.txt  main.c
tests/render_mod/: CMakeLists.txt  main.c
tests/render_s3m/: CMakeLists.txt  main.c
(+26 files in other folders)
